--- a/INSTALL
+++ b/INSTALL
@@ -37,10 +37,6 @@ Install mysql 5.6.19
 Copy scripts/settings.xml.template to ~/.m2/settings.xml and fill out missing fields
 Edit scripts/.home to fit your installation path.
 
-// Set global git config parameters
-git config --global user.name "Your Name"
-git config --global user.email "you@email.com"
-
 // Add the following line to /etc/hosts
 127.0.0.1 website.net
 
@@ -48,10 +44,15 @@ git config --global user.email "you@email.com"
 source ~/larskristian.net/larskristian.net/scripts/.home
 source ~/larskristian.net/larskristian.net/scripts/.alias
 source ~/larskristian.net/larskristian.net/scripts/.gitprompt
-source ~/larskristian.net/larskristian.net/scripts/.mysql
 source ~/larskristian.net/larskristian.net/scripts/.tomcat
 source ~/larskristian.net/larskristian.net/scripts/.maven
-source ~/larskristian.net/larskristian.net/scripts/.ant
+// Remember to adjust these files to fit your environment
+
+// Create a folder in $TOMCAT_HOME/lib/endorsed
+
+// Set global git config parameters in local  ~/larskristian.net/larskristian.net/.bash_profile
+git config --global user.name "Your Name"
+git config --global user.email "you@email.com"
 
 // Add the following line to the end of ~/.bash_profile:
-PROMPT_COMMAND='if [[ "$folder" != "$PWD" && "$PWD" != "$HOME" && -e .bash_profile ]]; then folder="$PWD"; . .bash_profile; fi'
+source ~/larskristian.net/larskristian.net/scripts/.lars_bash_profile
